Style(Arcturus.tsx): correct overflow

--- a/frontend/src/component/tree/template/arcturus/style.css
+++ b/frontend/src/component/tree/template/arcturus/style.css
@@ -1,7 +1,8 @@
 @import'../../../common/css/variable.css';
 #arcturus{
 	padding-left: var(--main-space);
-	padding-right:var(--main-space) ;
+	padding-right:var(--main-space);
+	overflow:hidden;
 }
 
 
